syntax = "proto3";

service Contacts{
    rpc AddContacts (ContactList) returns (Response) {}
}

message Response{
    string success =1;
}

message ContactList {
    repeated ContactObject sabyList = 1;
}

message ContactObject {
    string number = 1;
    string name = 2;
}
