syntax = "proto3";

service Initialize{
    rpc CreateAvd (Request) returns (Response) {}
    rpc DeleteAvd (Request) returns (Response) {}
    rpc StartAvd (Request) returns (Response) {}
    rpc StopAvd (Request) returns (Response) {}
    rpc SwitchAvd (Request) returns (Response) {}
    rpc UpdateWhatsapp (Saby) returns (UpdateResponse){}
    rpc RegisterMutliAvd (Saby) returns (UpdateResponse){}
}

message Saby{
    string username =1;
}

message UpdateResponse{
    string message =1;
    bool success =2;
}

message Request{
    string avdName = 1;

}

message Response{
    string sabyName = 1;
    string message = 2; 
    string alpha = 3;
    bool success = 4;
    string fullName = 5;
}
 