syntax = "proto3";

service Activations {
    rpc GetNumber(Request) returns(Response){}
    rpc GetOTP(Request) returns(Response){}
    rpc UpdateStatus(Request) returns(Response){}
    rpc StartActivation(Request) returns(ActivationResponse){}
    rpc StartManualActivation(Request) returns(ActivationResponse){}
    rpc GetCountryOperatorDetails(PhoneNumber) returns(ResponseOperator){}

}

  message Response{
    string phoneNumber =1;
    string otp=2;
    bool success =3;
    string message=4;
    string waName=5;
  }
  message PhoneNumber{
    string PhoneNumber=1;
  }
  message ResponseOperator{

    string mnc =1;
    string iso =2;
    string country =3;
    string network =4;
    bool success=5;
    string message=6;
    string mcc=7;
    string countryCode=8;


  }

  message ActivationResponse{
    string sabyName =1;
    string message =2;
    string phoneNumber =3;
    bool success =4;
    string waName=5;
  }

  message Request{
    string username =1;
    string simRegion =2;
    string simProvider = 3;
    string vpnRegion =4;
    string vpnProvider =5;
    bool sameRegion =6;
    uint32 vpnCountryid = 7;
    string lat = 8;
    string long = 9;
    string apiRoute =10;
  }